fild logic strategy (in progress)

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="line" id="line-10000">
-        <div class="line_card" id="1" data-spouse-id="" data-children-ids="" data-parents-ids="">
+        <div class="line_card" id="1" data-spouse-id data-children-ids data-parents-ids>
             <div class="line_card_top_cross">
                 <div class="line_card_cross_free line_card_cross_margin_right"></div>
                 <div class="line_card_cross_free"></div>
